--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ APP_URL=http://localhost
 
 APP_CIPHER=
 
+CHAVE_INTEGRACAO_SIGCE=
+URL_INTEGRACAO_SIGCE=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
