--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "laravelcollective/html": "^6.3",
         "maatwebsite/excel": "^3.1",
         "telegram-bot/api": "^2.3",
-        "yajra/laravel-acl": "^6.1",
         "yajra/laravel-datatables": "^1.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
