--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
+        "league/csv": "^9.22",
         "maatwebsite/excel": "^3.1",
         "telegram-bot/api": "^2.3",
         "yajra/laravel-datatables": "^1.5",
