--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ CHAVE_INTEGRACAO_SIGCE=
 URL_INTEGRACAO_SIGCE=
 SICOM_API_TOKEN=
 
+EVENTOS_URL=
+EVENTOS_API_TOKEN=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
