--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ APP_CIPHER=
 CHAVE_INTEGRACAO_SIGCE=
 URL_INTEGRACAO_SIGCE=
 SICOM_API_TOKEN=
+EXECUTIVA_API_TOKEN=
 
 EVENTOS_URL=
 EVENTOS_API_TOKEN=
